Actions
Bug #6948
closedaddr2line.c does not compile on FreeBSD 8
Bug #6948:
addr2line.c does not compile on FreeBSD 8
Description
=begin
addr2line.c: In function 'fill_lines':
addr2line.c:462: error: 'SIZE_MAX' undeclared (first use in this function)
addr2line.c:462: error: (Each undeclared identifier is reported only once
addr2line.c:462: error: for each function it appears in.)
On FreeBSD 8, ((|SIZE_MAX|)) is in sys/_stdint.h which is included from sys/stdint.h, but not any of the includes listed. Since ruby/ruby.h also provides ((|SIZE_MAX|)) I tried including it which fixes the problem.
I believe this was introduced with r36755
Please see the attached patch.
=end
Files
Updated by naruse (Yui NARUSE) about 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r36844.
Eric, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- addr2line.c: SIZE_MAX is defined in stdint.h, so r36755 breaks
32bit FreeBSD. [ruby-core:47360] [Bug #6948]
Actions