* addr2line.c: SIZE_MAX is defined in stdint.h, so r36755 breaks   32bit FreeBSD. [ruby-core:47360] [Bug #6948]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36844 b2dd03c8-39d4-4d8f-98ff-823fe69b080e